@@ -1,3 +1,7 @@
+tag-0.2-20210709 JP
+  - Apply most recent standard router methods
+  - Change Type=Training Session to Type=Training
+
 tag-0.2-20210708 JP
   - Replace 'xsede.org' with 'info.xsede.org' in Warehouse_XDCDB_Training_Class_Session GlobalURN
 
